updating our h1 tag with our name

--- a/index.html
+++ b/index.html
@@ -13,28 +13,30 @@
 <body>
     <header class='masthead'>
         <p class='masthead-intro'>Hi I'm</p>
-        <h1 class='masthead-heading'>Your Name Here</h1>
+        <h1 class='masthead-heading'>Diana Pulatova</h1>
     </header>
     <section class="details">
       <h1>Introduction</h1>
       <p>Details here...</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
-      <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I'm from Uzbekistan.</p>
+      <h1> What are your favorite hobbies?/h1>
+      <p>Tennis, ping pong, swimming, painting, reading and chess.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Robotics programmer.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>NYC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To get a decent job and develop new apps</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/dianapulatova">Github</a></li>
         </ul>
     </footer>
 </body>
 
 </html>
+
+
