--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I'm a Biochemist and Aspiring Software Engineer.</p>
       <h1>Where I'm From</h1>
       <p>I'm from Uzbekistan.</p>
-      <h1> What are your favorite hobbies?/h1>
+      <h1> What are your favorite hobbies? </h1>
       <p>Tennis, ping pong, swimming, painting, reading and chess.</p>
       <h1>What's your dream job?</h1>
       <p>Robotics programmer.</p>
       <h1>Where do you live?</h1>
       <p>NYC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>To get a decent job and develop new apps</p>
+      <p>To develop new apps.</p>
     </section>
 
     <footer id="footer">
