updating our details

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <h1>Where do you live?</h1>
       <p>NYC</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>To develop new apps.</p>
+      <p>To develop new apps and program robots.</p>
     </section>
 
     <footer id="footer">
